@@ -63,6 +63,7 @@ longusage() {
   echo "	--kernel-make=<makeprg> GNU Make to use for kernel"
   echo "	--kernel-target=<t>	Override default make target (bzImage)"
   echo "	--kernel-binary=<path>	Override default kernel binary path (arch/foo/boot/bar)"
+  echo "	--kernel-outputdir=<path> Save output files outside the source tree."
 
   echo "	--utils-cc=<compiler>	Compiler to use for utilities"
   echo "	--utils-as=<assembler>	Assembler to use for utils"
@@ -213,6 +214,10 @@ parse_cmdline() {
 			CMD_KERNEL_CROSS_COMPILE=`parse_opt "$*"`
 			CMD_KERNEL_CROSS_COMPILE=$(echo ${CMD_KERNEL_CROSS_COMPILE}|sed -e 's/.*[^-]$/&-/g')
 			print_info 2 "CMD_KERNEL_CROSS_COMPILE: ${CMD_KERNEL_CROSS_COMPILE}"
+			;;
+		--kernel-outputdir=*)
+			CMD_KERNEL_OUTPUTDIR=`parse_opt "$*"`
+			print_info 2 "CMD_KERNEL_OUTPUTDIR: ${CMD_KERNEL_OUTPUTDIR}"
 			;;
 		--utils-cc=*)
 			CMD_UTILS_CC=`parse_opt "$*"`
